--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,11 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 
 .env
+
+.env
+chunks-*.pkl
+embeddings-*.npy
+freeze.txt
+queries/
+index-*.faiss
+preprocessed.csv
